# NilDa

./: CMakeLists.txt  README.md
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
Release/examples/: Makefile  cmake_install.cmake
Release/examples/nn_convnet_fashionmnist/: Makefile  cmake_install.cmake
Release/examples/nn_dense_fashionmnist/: Makefile  cmake_install.cmake
Release/examples/nn_dense_mnist/: Makefile  cmake_install.cmake
Release/sources/: Makefile  cmake_install.cmake
Release/sources/core/: Makefile  cmake_install.cmake
Release/sources/core/neuralNetwork/: Makefile  cmake_install.cmake
Release/sources/core/neuralNetwork/layers/: Makefile
Release/sources/core/neuralNetwork/lossFunctions/: Makefile  cmake_install.cmake
Release/sources/core/neuralNetwork/optimizers/: Makefile  cmake_install.cmake
Release/sources/primitives/: Makefile
Release/sources/utils/: Makefile  cmake_install.cmake
Release/tests/: Makefile  cmake_install.cmake
Release/unitTests/: Makefile  cmake_install.cmake
Release/unitTests/activationFunctions/: Makefile
Release/unitTests/conv2d/: Makefile  cmake_install.cmake
Release/unitTests/conv2dDenseLayers/: Makefile  cmake_install.cmake
Release/unitTests/derivativeOfActivationFunctions/: Makefile  cmake_install.cmake
Release/unitTests/maxPool2d/: Makefile  cmake_install.cmake
Release/unitTests/neuralNetworkDense/: Makefile  cmake_install.cmake
Release/unitTests/neuralNetworks/: Makefile  cmake_install.cmake
Release/unitTests/saveLoadModel/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt
examples/nn_convnet_fashionmnist/: CMakeLists.txt  fashionMNIST.cpp
examples/nn_dense_fashionmnist/: CMakeLists.txt  fashionMNIST.cpp
examples/nn_dense_mnist/: CMakeLists.txt  mnist.cpp
sources/: CMakeLists.txt  test.cppcheck
sources/core/: CMakeLists.txt
sources/core/neuralNetwork/: CMakeLists.txt  activationFunction.h  coreNilDa.h  denseLayer.cpp  denseLayer.h  identity.h  inputLayer.cpp  inputLayer.h  layer.h  neuralNetwork.cpp  neuralNetwork.h  octave-workspace  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  softmax.h
sources/core/neuralNetwork/layers/: CMakeLists.txt  batchNormalizationLayer.cpp  batchNormalizationLayer.h  conv2DLayer.cpp  conv2DLayer.h  conv2DUtils.cpp  conv2DUtils.h  denseLayer.cpp  denseLayer.h  dropoutLayer.cpp  dropoutLayer.h  inputLayer.cpp  inputLayer.h  layer.cpp  layer.h  maxPool2DLayer.cpp  maxPool2DLayer.h  pool2DUtils.cpp  pool2DUtils.h
sources/core/neuralNetwork/layers/activationFunctions/: activationFunction.h  activationFunctionUtils.cpp  activationFunctionUtils.h  identity.cpp  identity.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
sources/core/neuralNetwork/lossFunctions/: CMakeLists.txt  binaryCrossentropy.cpp  binaryCrossentropy.h  categoricalCrossentropy.cpp  categoricalCrossentropy.h  lossFunction.h  lossFunctionUtils.cpp  lossFunctionUtils.h  sparseCategoricalCrossentropy.cpp  sparseCategoricalCrossentropy.h
sources/core/neuralNetwork/optimizers/: CMakeLists.txt  adaGrad.cpp  adaGrad.h  adam.cpp  adam.h  optimizer.h  rmsProp.cpp  rmsProp.h  rsmProp.cpp  rsmProp.h  sgd.cpp  sgd.h
sources/primitives/: Array.h  CMakeLists.txt  Matrix.h  Memory.h  Scalar.h  Vector.h  errors.h
sources/test-cppcheck-build-dir/: Random.a1  activationFunctionUtils.a1  adaGrad.a1  adam.a1  batchNormalizationLayer.a1  binaryCrossentropy.a1  categoricalCrossentropy.a1  conv2DLayer.a1  conv2DUtils.a1  denseLayer.a1  dropoutLayer.a1  files.txt  identity.a1  images.a1  importImageDatasets.a1  importMNISTDatasets.a1  inputLayer.a1  lastResults.xml  layer.a1  lossFunctionUtils.a1  maxPool2DLayer.a1  neuralNetwork.a1  pool2DUtils.a1  relu.a1  rmsProp.a1  sgd.a1  sigmoid.a1  softmax.a1  sparseCategoricalCrossentropy.a1  statistics.txt
sources/utils/: CMakeLists.txt  Random.cpp  Random.h  images.cpp  images.h  images.hpp  importDatasets.h  importImageDatasets.cpp  importMNISTDatasets.cpp  progressBar.h  timer.h
tests/: CMakeLists.txt  main.cpp
unitTests/: CMakeLists.txt
unitTests/activationFunctions/: CMakeLists.txt  main.cpp
unitTests/batchNorm/: CMakeLists.txt  main.cpp
unitTests/conv2d/: CMakeLists.txt  Conv.m  main.cpp  octave-workspace
unitTests/conv2dDenseLayers/: CMakeLists.txt  main.cpp
unitTests/derivativeOfActivationFunctions/: CMakeLists.txt  main.cpp
unitTests/maxPool2d/: CMakeLists.txt  main.cpp
unitTests/neuralNetworkDense/: CMakeLists.txt  main.cpp
unitTests/neuralNetworks/: CMakeLists.txt  main.cpp
unitTests/saveLoadModel/: CMakeLists.txt  main.cpp
